# pythonc

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  example  f.py  if_exp.py  make_zip.sh  nested.py  parse.py  pythonc.rs  pyyc  return.py  test  test.py  test.sh  test2.py  unique.py
P1_tests/: README.md
P2_tests/: README.md
P3_tests/: README.md
benches/: bench.rs
crates/ast/: Cargo.toml
crates/ast/src/: explicated.rs  explicit.rs  lib.rs  name.rs  parse.lalrpop  parse.rs
crates/coloring/: Cargo.toml
crates/coloring/src/: lib.rs
crates/il/: Cargo.toml
crates/il/src/: bb.rs  func.rs  inst.rs  lib.rs  slab.rs  syntax.lalrpop  syntax.rs  term.rs  ty.rs  val.rs
crates/interference/: Cargo.toml
crates/interference/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: builder.rs  expression.rs  lib.rs  program.rs  statement.rs  tmp.rs  value.rs
crates/liveness/: Cargo.toml
crates/liveness/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs
crates/python-ast/: Cargo.toml
crates/python-ast/src/: parse.rs
crates/python-fallback-parser/: Cargo.toml
crates/python-fallback-parser/examples/: main.rs
crates/python-fallback-parser/src/: lib.rs
crates/python-ir/: Cargo.toml
crates/python-trans/: Cargo.toml
crates/python-trans/src/: lib.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/trans/: Cargo.toml
crates/trans/src/: att.rs  ia32.rs  ia_32.rs  imm.rs  immediate.rs  lib.rs  mem.rs  memory.rs  register.rs  syntax.rs
crates/vm/: Cargo.toml
crates/vm/src/: instruction.rs  lib.rs  lvalue.rs  program.rs  rvalue.rs
lib/ast/: Cargo.toml
lib/ast/src/: error.rs  lib.rs  parser.lalrpop
lib/util/: Cargo.toml
lib/util/examples/: fmt.rs
pythonc/: .gitmodules  if.py  interview.py  nested.py  nine.py  no_param_lambda.py  test.explicated  test.py  test.rs  true.py
pythonc-ast/: Cargo.toml
pythonc-ast/src/: lib.rs  parse.lalrpop  parse.rs
pythonc-core/: Cargo.toml
pythonc-driver/: Cargo.toml
pythonc-driver/src/: lib.rs
pythonc-ir/: Cargo.toml
pythonc-ir/src/: lib.rs
pythonc-syntax/: Cargo.toml
pythonc-syntax/src/: ast.rs  lib.rs  p0.lalrpop  p0.rs  token.rs
pythonc-token/: Cargo.toml
pythonc-trans/: Cargo.toml
pythonc-trans/src/: ia32.rs  lib.rs  mem.rs  reg.rs
pythonc/lib/ast/: .gitignore  Cargo.toml
pythonc/lib/ast/src/: lib.rs  parser.lalrpop
pythonc/src/: explicate.rs  flatten.rs  heapify.rs  lib.rs  main.rs
pythonc/tests/: pyyc_tests_contrib.rs
runtime/: Makefile
src/: asm.rs  ast.rs  cfg.rs  compiler.rs  error.rs  explicate.rs  flatten.rs  free_vars.rs  gas.rs  graph.rs  heapify.rs  ir.rs  lexer.rs  lib.rs  liveness.rs  main.rs  p0.lalrpop  raise.rs  reg.rs  regalloc.rs  stack.rs  vasm.rs  virtualize.rs  vm.rs
src/ast/: mod.rs
src/ssa/: bb.rs  block.rs  branch.rs  expr.rs  func.rs  function.rs  inst.rs  instruction.rs  live.rs  liveness.rs  mod.rs  program.rs  rval.rs  solver.rs  term.rs  val.rs  value.rs
src/vm/: block.rs  func.rs  inst.rs  interference.rs  liveness.rs  mod.rs  module.rs  reg.rs  ssa.rs  ssa2.rs  stack.rs  term.rs  util.rs  var.rs  visit.rs
src/x86/: ia32.rs  imm.rs  mem.rs  mod.rs  reg.rs
tests/: integration_tests.rs  pyyc_tests_contrib.rs
tests/ast/: and.py  class.py  complex_input.py  def.py  dict.py  if_stmt.py  or.py  parse.py  test2.py  while.py
tests/programs/: intense_branching.py
tests/pyyc-tests-contrib/: README.md
(+19 files in other folders)
