[package]
name = "python"
version = "0.1.0"
authors = ["Peter Delevoryas <peter.delevoryas@colorado.edu>"]

[lib]
name = "python"

[[bin]]
name = "pythonc"
path = "src/main.rs"
doc = false

[features]
default = []

[dependencies]
python-token = { path = "crates/token" }
python-ast = { path = "crates/ast" }
python-ir = { path = "crates/ir" }
python-trans = { path = "crates/trans" }
liveness = { path = "crates/liveness" }
python-vm = { path = "crates/vm" }
interference = { path = "crates/interference" }
parser = { path = "crates/parser" }
# python-fallback-parser = { path = "crates/python-fallback-parser" }
error-chain = "0.11.0"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"

[workspace]
members = [
    "crates/token",
    "crates/ast",
    "crates/ir",
    "crates/vm",
    "crates/trans",
    "crates/parser",
    "crates/python-fallback-parser",
    "crates/liveness",
    "crates/interference",
    "crates/coloring",
]
