[package]
name = "pythonc"
version = "0.1.0"
authors = ["Peter Delevoryas <peter.delevoryas@colorado.edu>"]

[[bin]]
doc = false
name = "pythonc"

[dependencies]
error-chain = "0.11.0"
docopt_macros = "0.8"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
tempfile = "2.2.0"
slab = "0.4.0"
util = { path = "lib/util" }
ast = { path = "lib/ast" }

[dependencies.lalrpop-util]
version = "0.13.1"

[workspace]
members = [
    "lib/util",
    "lib/ast",
]
