[package]
name = "pythonc"
version = "0.2.0"
authors = ["Peter Delevoryas <peter.delevoryas@colorado.edu>",
           "William Temple <william.temple@colorado.edu>"]
license = "MIT"

[[bin]]
doc = false
name = "pythonc"

[dependencies]
error-chain = "0.11.0"
tempfile = "2.2.0"
clap = "2.27.1"
log = "0.3.8"
env_logger = "0.4.3"
petgraph = "0.4.5"
itertools = "0.7.4"
util = { path = "lib/util" }
ast = { path = "lib/ast" }

[dependencies.lalrpop-util]
version = "0.13.1"

[workspace]
members = [
    "lib/util",
    "lib/ast",
]
