[package]
name = "pythonc-driver"
version = "0.1.0"
authors = ["Peter Delevoryas <peter.delevoryas@colorado.edu>"]

[dependencies]
pythonc-token = { path = "../pythonc-token" }
pythonc-ast = { path = "../pythonc-ast" }
pythonc-ir = { path = "../pythonc-ir" }
pythonc-trans = { path = "../pythonc-trans" }
error-chain = "0.11.0"
